--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
-  background: url(bg.jpg) no-repeat;
+  background: url(../img/bg.jpg) no-repeat;
   background-size: cover;
 }
 
